--- a/exercicios/ex022/fundo005.html
+++ b/exercicios/ex022/fundo005.html
@@ -6,10 +6,11 @@
     <title>Posicionamento</title>
     <style>
         body {
-            height: 98vh;
+            height: 100vh;
+           
             background-image: url(imagens/wallpaper003.jpg);
-            background-position: center center;
-            background-position: center center;
+            background-position: right bottom;
+            
         }
     </style>
 </head>
