--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -10,7 +10,7 @@
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
-            background-repeat: no-repeat;
+            background-repeat:repeat-y ;
             background-size:cover ;
 
 
@@ -33,6 +33,36 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, officiis dignissimos. Id deleniti minus blanditiis asperiores iste vel tempore ullam quis eligendi, quasi distinctio, earum atque, vitae adipisci ratione obcaecati.
         </p>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt nam at vitae impedit, fugit quam aspernatur minus itaque quae est repellendus natus totam beatae eum architecto delectus voluptatem nostrum nesciunt!</p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, officiis dignissimos. Id deleniti minus blanditiis asperiores iste vel tempore ullam quis eligendi, quasi distinctio, earum atque, vitae adipisci ratione obcaecati.
+        </p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt nam at vitae impedit, fugit quam aspernatur minus itaque quae est repellendus natus totam beatae eum architecto delectus voluptatem nostrum nesciunt!</p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, officiis dignissimos. Id deleniti minus blanditiis asperiores iste vel tempore ullam quis eligendi, quasi distinctio, earum atque, vitae adipisci ratione obcaecati.
+        </p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt nam at vitae impedit, fugit quam aspernatur minus itaque quae est repellendus natus totam beatae eum architecto delectus voluptatem nostrum nesciunt!</p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, officiis dignissimos. Id deleniti minus blanditiis asperiores iste vel tempore ullam quis eligendi, quasi distinctio, earum atque, vitae adipisci ratione obcaecati.
+        </p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt nam at vitae impedit, fugit quam aspernatur minus itaque quae est repellendus natus totam beatae eum architecto delectus voluptatem nostrum nesciunt!</p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, officiis dignissimos. Id deleniti minus blanditiis asperiores iste vel tempore ullam quis eligendi, quasi distinctio, earum atque, vitae adipisci ratione obcaecati.
+        </p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt nam at vitae impedit, fugit quam aspernatur minus itaque quae est repellendus natus totam beatae eum architecto delectus voluptatem nostrum nesciunt!</p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, officiis dignissimos. Id deleniti minus blanditiis asperiores iste vel tempore ullam quis eligendi, quasi distinctio, earum atque, vitae adipisci ratione obcaecati.
+        </p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt nam at vitae impedit, fugit quam aspernatur minus itaque quae est repellendus natus totam beatae eum architecto delectus voluptatem nostrum nesciunt!</p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, officiis dignissimos. Id deleniti minus blanditiis asperiores iste vel tempore ullam quis eligendi, quasi distinctio, earum atque, vitae adipisci ratione obcaecati.
+        </p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt nam at vitae impedit, fugit quam aspernatur minus itaque quae est repellendus natus totam beatae eum architecto delectus voluptatem nostrum nesciunt!</p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, officiis dignissimos. Id deleniti minus blanditiis asperiores iste vel tempore ullam quis eligendi, quasi distinctio, earum atque, vitae adipisci ratione obcaecati.
+        </p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt nam at vitae impedit, fugit quam aspernatur minus itaque quae est repellendus natus totam beatae eum architecto delectus voluptatem nostrum nesciunt!</p>
+
+
     </main>
     
    
