--- a/exercicios/ex023/tabela004.html
+++ b/exercicios/ex023/tabela004.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,7 @@
             width: 100%;
         }
         th td {
-            text-align: left;
+            text-align:right;
             padding: 8px;
         }
         tr:nth-child(even) {
@@ -52,6 +52,23 @@
   <td>Brown</td>
   <td>$250</td>
   </tr>
+</table>
+<hr>
+<hr>
+<br>
+<br>
+<table style="border: 1px solid black;"> 
+    <tr>
+        <th>Nome</th>
+        <th>Idade</th>
+        <th>Peso</th>
+    </tr>
+    <tr>
+        <td>Douglas</td>
+        <td>41</td>
+        <td>90</td>
+        
+    </tr>
 </table>
 
 
