--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,5 +7,15 @@
 </head>
 <body>
     <h1>Uso de tabelas grandes</h1>
+    <!--ANATOMIA PARA TABELAS GRANDES
+     TABLE
+        THEAD
+            TR TH TD
+        TBODY  
+            TR TH TD 
+        TFOOT
+            TR TH TD
+        -->
+            
 </body>
 </html>
