--- a/exercicios/ex023/tabela007.html
+++ b/exercicios/ex023/tabela007.html
@@ -57,7 +57,11 @@
             <td>25</td>
         </tr>
     </table>
-    <p>Outro atributo que pode ser usado é <i>Caption</i></p>
+    <br>
+    <br>
+    <h2>
+        <p>Outro atributo que pode ser usado é <i>Caption</i></p>
+    </h2>
 
     <table style="width:70%">
         <caption>Monthly Savings</caption>
@@ -73,6 +77,27 @@
         <tr>
             <td>February</td>
             <td>$50</td>
+        </tr>
+    </table>
+    <br>
+    <br>
+    <h2>
+        <p>Como colocar em duas linhas de celula</p>
+        <br>
+        <br>
+    </h2>
+
+    <table style="width: 70%">
+        <tr>
+            <th>Name</th>
+            <td>Jill</td>
+        </tr>
+        <tr>
+            <th rowspan="2">Phone</th>
+            <td>5555-7895</td>
+        </tr>
+        <tr>
+            <td>4366-6994</td>
         </tr>
     </table>
             
