--- a/exercicios/ex024/iframe001.html
+++ b/exercicios/ex024/iframe001.html
@@ -6,7 +6,12 @@
     <title>Estudo de iFrame</title>
 </head>
 <body>
-    <h1>testando o uso de um iframe</h1>
-    <p>Acessando o site do curso em video para aprender a programar.</p>
+    <h1>Testando o uso de um iframe</h1>
+    <p>Acessando o site do 
+        <iframe src="https://www.cursoemvideo.com" frameborder="0"></iframe>
+        para aprender a programar.</p>
+    <p>Site do 
+        <iframe src="https://www.google.com" frameborder="0"></iframe>também é muito legal.
+    </p>
 </body>
 </html>
