--- a/exercicios/ex024/iframe001.html
+++ b/exercicios/ex024/iframe001.html
@@ -4,14 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudo de iFrame</title>
+    <style>
+        iframe{
+            width: 400px;
+            height: 400px;
+            border: 1px solid black;
+        }
+    </style>
 </head>
 <body>
+    <!--Tamanho padrão 300x150-->
     <h1>Testando o uso de um iframe</h1>
     <p>Acessando o site do 
-        <iframe src="https://www.cursoemvideo.com" frameborder="0"></iframe>
-        para aprender a programar.</p>
-    <p>Site do 
-        <iframe src="https://www.google.com" frameborder="0"></iframe>também é muito legal.
+        <iframe src="https://www.cursoemvideo.com" frameborder="0"
+        height="500" scolling="auto"></iframe>
+        para aprender a programar.
+        <a href="http://www.cursoemvideo.com" target="_blank">Curso em Vídeo</a>
+    </p>
+
+
+    <p>
+        O repositório do Guanabara 
+        <iframe src="
+        http://gustavoguanabara.github.io" frameborder="0" height></iframe>
+        <a href="http://gustavoguanabara.github.io" target="_blank"> Github</a>
+        também é legal
     </p>
 </body>
 </html>
