--- a/exercicios/ex024/iframe001.html
+++ b/exercicios/ex024/iframe001.html
@@ -7,7 +7,7 @@
     <style>
         iframe{
             width: 400px;
-            height: 400px;
+            height: 300px;
             border: 1px solid black;
         }
     </style>
@@ -29,6 +29,9 @@
         http://gustavoguanabara.github.io" frameborder="0" height></iframe>
         <a href="http://gustavoguanabara.github.io" target="_blank"> Github</a>
         também é legal
+    </p>
+    <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut eveniet dolorem nisi exercitationem tempora minima. Id veritatis nulla tempore rerum veniam sint iusto harum eum iste ea? Perferendis, recusandae odit.
     </p>
 </body>
 </html>
